# flask-x-openapi-schema

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  justfile  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  run_benchmark.py  run_benchmarks.py  sitemap.xml
.github/workflows/: cd.yaml  ci.yaml  gh-page.yaml
api/: index.html  index.md
api/core/: index.html  index.md
api/flask/: index.html  index.md
api/flask_restful/: index.html  index.md
api/i18n/: index.html  index.md
api/models/: index.html  index.md
architecture/: index.html  index.md
benchmarks/: README.md  __init__.py  comprehensive_benchmark.py  enhanced_benchmark.py  generate_report.py  locust_report.py  locustfile.py  models.py  profile.out  profile_script.py  results_stats.csv  results_stats_history.csv  run_benchmark.sh  run_benchmarks.py  run_locust_benchmark.py  simple_benchmark.py  test_benchmark.py  test_comprehensive.py
benchmarks/common/: __init__.py  factories.py  models.py  utils.py
benchmarks/flask/: __init__.py  app.py  locustfile.py
benchmarks/flask_restful/: __init__.py  app.py  locustfile.py
benchmarks/results/: flask_failures.csv  flask_restful_failures.csv  flask_restful_stats.csv  flask_restful_stats_history.csv  flask_stats.csv  flask_stats_history.csv  report.txt
core_components/: index.html  index.md
docs/: README.md  architecture.md  core_components.md  file_uploads.md  framework_specific.md  getting_started.md  index.md  internationalization.md  parameter_binding.md  response_handling.md  schema_generation.md  usage_guide.md
docs/api/: core.md  flask.md  flask_restful.md  flask_x_openapi_schema.html  i18n.md  index.md  models.md  search.js
docs/markdown/: flask_x_openapi_schema.html  index.html  search.js
examples/: README.md  __init__.py  cache_config_example.py  cache_example.py  cache_simple.py  cache_strategy_example.py  file_upload_example.py  i18n_example.py  methodview_example.py  pydantic_file_upload_example.py  service_api_i18n_example.py  standalone_cache_demo.py
examples/common/: __init__.py  models.py  utils.py
examples/custom_errors/: README.md  __init__.py  app.py
examples/flask/: __init__.py  app.py  file_upload.py  i18n_demo.py  simple_api.py
examples/flask_restful/: __init__.py  app.py  file_upload.py  i18n_demo.py  simple_api.py
file_uploads/: index.html  index.md
getting_started/: index.html  index.md
internationalization/: index.html  index.md
parameter_binding/: index.html  index.md
response_handling/: index.html  index.md
schema_generation/: index.html  index.md
search/: search_index.json
src/flask_x_openapi_schema/: __init__.py  commands.py  decorators.py  mdx_generator.py  methodview_utils.py  mixins.py  restful_utils.py  schema_generator.py  utils.py
tests/: README.md  conftest.py  test_base_model_coverage.py  test_commands.py  test_commands_coverage.py  test_complex_model_binding.py  test_config.py  test_decorators.py  test_decorators_coverage.py  test_file_models_coverage.py  test_file_upload_basic.py  test_helpers.py  test_i18n_basic.py  test_i18n_model_coverage.py  test_i18n_models.py  test_i18n_string_coverage.py  test_mdx_generator.py  test_methodview.py  test_methodview_coverage.py  test_mixins_coverage.py  test_openapi_mixin.py  test_opt_deps.py  test_performance.py  test_restful_utils.py  test_restful_utils_coverage.py  test_schema_generator.py  test_schema_generator_coverage.py  test_simple.py  test_utils.py
tests/cli/: __init__.py  test_commands.py
tests/core/: __init__.py  conftest.py  test_base_model_coverage.py  test_commands.py  test_commands_coverage.py  test_config.py  test_decorator_base.py  test_file_models_coverage.py  test_file_upload_basic.py  test_i18n_basic.py  test_i18n_model_coverage.py  test_i18n_models.py  test_i18n_string_coverage.py  test_mixins_coverage.py  test_performance.py  test_schema_generator.py  test_schema_generator_coverage.py  test_simple.py  test_utils.py
tests/flask/: __init__.py  conftest.py  (+6 more)
usage_guide/: index.html  index.md
(+103 files in other folders)
