[project]
name = "flask-x-openapi-schema"
version = "0.1.0"
description = "A powerful utility for automatically generating OpenAPI schemas from Flask-RESTful resources, Flask.MethodView classes, and Pydantic models."
readme = "README.md"
authors = [{ name = "straydragon", email = "straydragonl@foxmail.com" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

license = { text = "MIT" }

requires-python = ">=3.8"

dependencies = [
    "flask>=2.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "typing_extensions>=4.0.0; python_version < '3.10'"
]

[dependency-groups]
dev = [
    "locust>=2.25.0",
    "pydantic[email]>=2.10.6",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "rich>=14.0.0",
]


[project.optional-dependencies]
flask-restful = ["flask-restful>=0.3.9"]

[project.urls]
Homepage = "https://github.com/StrayDragon/flask-x-openapi-schema"
Documentation = "https://github.com/StrayDragon/flask-x-openapi-schema/tree/main/docs"
Repository = "https://github.com/StrayDragon/flask-x-openapi-schema.git"
Issues = "https://github.com/StrayDragon/flask-x-openapi-schema/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/flask_x_openapi_schema --cov-report=term-missing --cov-report=html -v"
xfail_strict = true
filterwarnings = [
    # "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/flask_x_openapi_schema"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
